--- a/kort_med_pager/index.html
+++ b/kort_med_pager/index.html
@@ -10,12 +10,15 @@
 
 <body>
     <article class="card">
-        <section class="quote">
-            <h1>"If debugging is the process of removing software bugs, then
-                programming must be the process of putting them in."
-            </h1>
-            <p>Edsger Dijkstra</p>
-        </section>
+        <h1>"If debugging is the process of removing software bugs, then
+            programming must be the process of putting them in."
+        </h1>
+        <p>Edsger Dijkstra</p>
+        <footer class="pager">
+            <a href="#" class="dot active"></a>
+            <a href="#" class="dot"></a>
+            <a href="#" class="dot"></a>
+        </footer>
     </article>
 
 </body>
