--- a/profilkort/index.html
+++ b/profilkort/index.html
@@ -11,11 +11,12 @@
 <body>
     <article class="card">
         <img src="img/close.svg" class="close" alt="close">
-        <img src="img/Margaret_Hamilton_1995.jpg" class="profile-image" alt="profile-image">
+        <img src="img/Margaret_Hamilton_1995.jpg" class="profile" alt="profile-image">
         <h1>Margaret Hamilton
         </h1>
-        <p>Kick ass coder</p>
-        <a href="https://en.wikipedia.org/wiki/Margaret_Hamilton_(software_engineer)">Omg, tell me more!</a>
+        <p>Kick Ass Coder</p>
+        <a href="https://en.wikipedia.org/wiki/Margaret_Hamilton_(software_engineer)">Omg, tell me
+            more!</a>
     </article>
 
 </body>
