--- a/produktkomponent_landskapsläge/index.html
+++ b/produktkomponent_landskapsläge/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Page</title>
+    <title>Produktkomponent landskapsläge</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +12,6 @@
     <section class="product-card">
         <section class="product-image">
             <img src="img/adidas_superstar.png" alt="image of sneakers">
-            <small class="product-number">SE2324234030</small>
         </section>
 
         <section class="product-information">
@@ -24,11 +23,13 @@
             <section class="product-description">
                 <p>It doesn't get any hotter than this. Rule the streets with these jungle flavoured sneakers from
                     Adidas.</p>
+                <button>Take my money!</button>
             </section>
 
             <section class="price">
                 <p>799 SEK</p>
             </section>
+
 </body>
 
 </html>
