--- a/japan_flag/index.html
+++ b/japan_flag/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <section class="container">
-        <section class="flex-item"></section>
+        <section class="flag">
+            <section class="red-circle"></section>
+        </section>
     </section>
 
 </body>
