--- a/produktkomponent_landskapsläge/index.html
+++ b/produktkomponent_landskapsläge/index.html
@@ -12,13 +12,13 @@
     <section class="product-card">
         <section class="product-image">
             <img src="img/adidas_superstar.png" alt="image of sneakers">
-            <p>799 SEK</p>
+            <p class="price">799 SEK</p>
         </section>
 
         <section class="product-information">
             <section class="title">
-                <h3 class="product-title">Adidas Superstar</h3>
-                <p class="product-model">2019 Jungle Edition</p>
+                <h1 class="product-title">Adidas Superstar</h1>
+                <h2 class="product-model">2019 Jungle Edition</h2>
             </section>
 
             <section class="product-description">
@@ -26,6 +26,8 @@
                     Adidas.</p>
                 <button>Take my money!</button>
             </section>
+        </section>
+    </section>
 </body>
 
 </html>
