--- a/spelkort/index.html
+++ b/spelkort/index.html
@@ -13,6 +13,7 @@
         <section class="heart upper-left">&hearts;</section>
         <section class="number">9</section>
         <section class="heart center">&hearts;</section>
+        <section class="second-number">9</section>
         <section class="heart lower-right">&hearts;</section>
     </article>
 
